--- a/codekit-config.json
+++ b/codekit-config.json
@@ -920,6 +920,17 @@
       "fileType" : 4,
       "debugStyle" : 0
     },
+    "\/backend_dev\/js\/scripts-ck.js" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/backend_dev\/js\/scripts-ck.js",
+      "outputStyle" : 1,
+      "syntaxCheckerStyle" : 1,
+      "outputAbbreviatedPath" : "\/backend_dev\/js\/scripts-ck-ck.js",
+      "fileType" : 64
+    },
     "\/build\/scss\/libs\/neat\/grid\/_row.scss" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
@@ -1749,15 +1760,6 @@
       "outputAbbreviatedPath" : "No Output Path",
       "fileType" : 2048
     },
-    "\/backend_dev\/addcurrency.php" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/backend_dev\/addcurrency.php",
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 2048
-    },
     "\/build\/scss\/libs\/bourbon\/bourbon\/css3\/_columns.scss" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
@@ -1781,6 +1783,15 @@
       "outputAbbreviatedPath" : "\/build\/scss\/libs\/bourbon\/css\/_deprecated-webkit-gradient.css",
       "fileType" : 4,
       "debugStyle" : 0
+    },
+    "\/backend_dev\/addcurrency.php" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/backend_dev\/addcurrency.php",
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 2048
     },
     "\/build\/scss\/libs\/neat\/_neat-helpers.scss" : {
       "ignoreWasSetByUser" : 0,
