integrated the currency selector, data only exists for United states though

--- a/codekit-config.json
+++ b/codekit-config.json
@@ -272,6 +272,17 @@
       "fileType" : 4,
       "debugStyle" : 0
     },
+    "\/www\/countries\/US.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/www\/countries\/US.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/www\/countries\/US.png",
+      "initialSize" : 18320,
+      "fileType" : 8192
+    },
     "\/build\/scss\/libs\/bourbon\/bourbon\/css3\/_radial-gradient.scss" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
@@ -503,18 +514,6 @@
       "outputAbbreviatedPath" : "No Output Path",
       "fileType" : 2048
     },
-    "\/build\/scss\/libs\/bourbon\/bourbon\/addons\/_hide-text.scss" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 1,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/build\/scss\/libs\/bourbon\/bourbon\/addons\/_hide-text.scss",
-      "outputStyle" : 0,
-      "shouldRunBless" : 0,
-      "outputAbbreviatedPath" : "\/build\/scss\/libs\/bourbon\/bourbon\/css\/_hide-text.css",
-      "fileType" : 4,
-      "debugStyle" : 0
-    },
     "\/build\/scss\/libs\/neat\/grid\/_media.scss" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
@@ -524,6 +523,18 @@
       "outputStyle" : 0,
       "shouldRunBless" : 0,
       "outputAbbreviatedPath" : "\/build\/scss\/libs\/neat\/css\/_media.css",
+      "fileType" : 4,
+      "debugStyle" : 0
+    },
+    "\/build\/scss\/libs\/bourbon\/bourbon\/addons\/_hide-text.scss" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/build\/scss\/libs\/bourbon\/bourbon\/addons\/_hide-text.scss",
+      "outputStyle" : 0,
+      "shouldRunBless" : 0,
+      "outputAbbreviatedPath" : "\/build\/scss\/libs\/bourbon\/bourbon\/css\/_hide-text.css",
       "fileType" : 4,
       "debugStyle" : 0
     },
@@ -1532,6 +1543,17 @@
       "fileType" : 4,
       "debugStyle" : 0
     },
+    "\/www\/img\/2costa2.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/www\/img\/2costa2.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/www\/img\/2costa2.png",
+      "initialSize" : 297769,
+      "fileType" : 8192
+    },
     "\/build\/scss\/libs\/bourbon\/functions\/_grid-width.scss" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
@@ -1543,17 +1565,6 @@
       "outputAbbreviatedPath" : "\/build\/scss\/libs\/bourbon\/css\/_grid-width.css",
       "fileType" : 4,
       "debugStyle" : 0
-    },
-    "\/www\/img\/2costa2.png" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/www\/img\/2costa2.png",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/www\/img\/2costa2.png",
-      "initialSize" : 297769,
-      "fileType" : 8192
     },
     "\/build\/scss\/libs\/bourbon\/css3\/_perspective.scss" : {
       "ignoreWasSetByUser" : 0,
@@ -1682,18 +1693,6 @@
       "fileType" : 4,
       "debugStyle" : 0
     },
-    "\/build\/scss\/libs\/bourbon\/_bourbon.scss" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 1,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/build\/scss\/libs\/bourbon\/_bourbon.scss",
-      "outputStyle" : 0,
-      "shouldRunBless" : 0,
-      "outputAbbreviatedPath" : "\/build\/scss\/libs\/css\/_bourbon.css",
-      "fileType" : 4,
-      "debugStyle" : 0
-    },
     "\/build\/scss\/libs\/bourbon\/_bourbon-deprecated-upcoming.scss" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
@@ -1703,6 +1702,18 @@
       "outputStyle" : 0,
       "shouldRunBless" : 0,
       "outputAbbreviatedPath" : "\/build\/scss\/libs\/css\/_bourbon-deprecated-upcoming.css",
+      "fileType" : 4,
+      "debugStyle" : 0
+    },
+    "\/build\/scss\/libs\/bourbon\/_bourbon.scss" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/build\/scss\/libs\/bourbon\/_bourbon.scss",
+      "outputStyle" : 0,
+      "shouldRunBless" : 0,
+      "outputAbbreviatedPath" : "\/build\/scss\/libs\/css\/_bourbon.css",
       "fileType" : 4,
       "debugStyle" : 0
     },
